<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServicosActivity"
    android:background="@drawable/screenbg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/shop_logo"
            android:layout_gravity="center"
            android:layout_marginTop="180sp"
            />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnUserBricolage"
        android:text="@string/btn_bricolage"
        android:textColor="@color/ColorWhite"
        android:textSize="20sp"
        android:background="@drawable/btnloginbg"


        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnUserCarpintaria"
        android:text="@string/btn_carpintaria"
        android:textColor="@color/ColorWhite"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:background="@drawable/btnloginbg"


        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnUserLimpezas"
        android:text="@string/btn_limpezas"
        android:textColor="@color/ColorWhite"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/btnloginbg"


        />

       </LinearLayout>

</LinearLayout>
